# playbar

./: .gitignore  .gitmodules  Cargo.toml  README.md  run.sh
password/: Cargo.toml  README.md
password/src/: google.rs  google_login.rs  lib.rs  main.rs  password.rs  save.rs
password/src/password/: mod.rs  util.rs
sj_token/: Cargo.toml  README.md
sj_token/src/: lib.rs
sj_ui/: Cargo.toml
sj_ui/src/: lib.rs  player.rs  prelude.rs  test_query_response.rs  ui.rs
sj_ui/src/sj/: api.rs  mod.rs  prelude.rs  query.rs  stream.rs
src/: app.rs  input.rs  main.rs  portable.rs  wave.rs
