[package]
name = "playbar"
version = "0.1.0"
authors = ["Cole Lawrence <cole@reaktor.com>"]
edition = "2018"

[dependencies]
cpal = { version = "0.8" }
rodio = { version = "0.8.1", default-features=false, features=["mp3"]}
termcolor = "1"
password = { path = "./password" }

[workspace]
members = [
  ".",
  "sj_token",
  "password",
  "password/http_req",
]
