[package]
name = "playbar"
version = "0.1.0"
authors = ["Cole Lawrence <cole@reaktor.com>"]
edition = "2018"

[dependencies]
app_dirs = { version = "^1.2.1", optional = true }
password = { path = "./password" }
sj_ui = { path = "./sj_ui" }

[workspace]
members = [
  ".",
  "sj_ui",
  "sj_token",
  "password",
  "password/http_req",
]

[features]
# Building as an app will use the platform app directory for storing credentials
default = []
app = ["app_dirs"]

[[bin]]
name = "playbar"
path = "src/app.rs"
required-features = ["app"]

[[bin]]
name = "playbarp"
path = "src/portable.rs"
