[package]
name = "sj_ui"
version = "0.1.0"
authors = ["Cole Lawrence <colelawr@gmail.com>"]
edition = "2018"

[dependencies]
sj_token = { path = "../sj_token" }

actix-web = { version = "0.7.18", features = ["ssl"]}
cpal = { version = "0.8" }
futures = "0.1"
percent-encoding = "1.0.1"
rodio = { version = "0.8.1", default-features=false, features=["mp3"]}
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
termcolor = "1"
