[package]
name = "sj_ui"
version = "0.1.0"
authors = ["Cole Lawrence <colelawr@gmail.com>"]
edition = "2018"

[dependencies]
sj_token = { path = "../sj_token" }

actix = "0.7.9"
actix-web = { version = "0.7.18", features = ["ssl"]}
base64 = "0.10.1"
cpal = { version = "0.8" }
crossterm = "0.6"
futures = "0.1"
percent-encoding = "1.0.1"
rodio = { version = "0.8.1", default-features=false, features=["mp3"]}
rust-crypto = "^0.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
